# LinkSAC

./: .gitignore  pyproject.toml
src/linksac/: __init__.py  datasets.py  simulations.py  typing.py
tests/: test_datasets.py  test_simulations.py
