[project]
name = "linksac"
version = "0.1.0"
description = ""
authors = [
    {name = "abdkarr",email = "7543956+abdkarr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "linksac", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
